--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.google.code.gson:gson:2.8.5'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha'
+    api 'com.google.dagger:dagger:2.22.1'
+    api 'com.squareup.retrofit2:retrofit:2.5.1-SNAPSHOT'
 }
