--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.0.0"
     implementation "androidx.navigation:navigation-ui-ktx:2.0.0"
     kapt 'com.google.dagger:dagger-compiler:2.22.1'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04"
 }
