--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.google.code.gson:gson:2.8.5'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0-alpha'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
     api 'com.google.dagger:dagger:2.22.1'
     api 'com.squareup.retrofit2:retrofit:2.5.1-SNAPSHOT'
 }
